namespaces/monitoring/network/grafana.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  generation: 1
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.homelab.local
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
